--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>hello mohammad this is branch mohammad</h1>
+    <h1> this is an update</h1>
     <script src="app.js"></script>
 </body>
 </html>
